# cppmemory

./: .gitignore  CMakeLists.txt  README.md
buildscripts/: configure_debug.cmd
commonlib/: CMakeLists.txt  allocator.cpp  crtallocator.cpp  diag.cpp  pch.h  rtstack.cpp  stopwatch.cpp
commonlib/include/cppmem/: allocator.h  criticalsection.h  diag.h  interface.h  membase.h  pagealloc.h  rtstack.h  singletonmemop.h  stopwatch.h
cppoperators/: CMakeLists.txt  cppoperator.cpp  globalservice.cpp  globalservice.h  interface1.h  myclass.cpp  myclass.h  pch.h
pageallocation/: CMakeLists.txt  pageallocationsample.cpp  pch.h
runtimepool/: CMakeLists.txt  pch.h  poolallocator.cpp  poolallocator.h  runtimepoolsample.cpp
runtimestack/: CMakeLists.txt  pch.h  runtimestacksample.cpp  tcptable.cpp  tcptable.h
stdallocator/: CMakeLists.txt  pch.h  stdallocatorsample.cpp
